# DrowsinessDetection

./: README.md  pyproject.toml
src/: app.py  appMobileNet.py
