[tool.poetry]
name = "DrowsinessDetection"
version = "0.1.0"
description = "Drowsiness Detection App"
authors = ["Muhamamad Luthfi <muhammad.luthfi2502@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "==1.39.0"
tensorflow = "==2.10.0" 
joblib = "^1.4.2"
scikit-learn = "^1.5.2" 
Pillow = "^10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
