[tool.poetry]
name = "DrowsinessDetection"
version = "0.1.0"
description = "Drowsiness Detection App"
authors = ["Muhamamad Luthfi <muhammad.luthfi2502@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit ="*"
tensorflow ="*"
joblib ="*"
scikit-learn ="*"
Pillow ="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
